SFA01Shared/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Curren_Cumulative_Target_Revenue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current Cumulative Target Revenue</description>
        <label>Current Cumulative Target Revenue</label>
        <referenceTo>Sales_Target_Revenue__c</referenceTo>
        <relationshipLabel>Opportunity Product (Current Cumulative Target Revenue)</relationshipLabel>
        <relationshipName>Opportunity_Product3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(MONTH(If(ISBLANK(Opportunity.Billing_Effective_Date__c), Opportunity.CloseDate ,Opportunity.Billing_Effective_Date__c)),1,&quot;Q1&quot;,2,&quot;Q1&quot;,3,&quot;Q1&quot;,4,&quot;Q2&quot;,5,&quot;Q2&quot;,6,&quot;Q2&quot;,7,&quot;Q3&quot;,8,&quot;Q3&quot;,9,&quot;Q3&quot;,10,&quot;Q4&quot;,11,&quot;Q4&quot;,&quot;Q4&quot;)</formula>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realized_Revenue__c</fullName>
        <formula>Opportunity.Realized_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Realized Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Margin__c</fullName>
        <formula>( Target_Revenue_Id_Account__r.Target_Revenue__c  -  Realized_Revenue__c) * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Revenue_Id_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Revenue Id Account</label>
        <referenceTo>Sales_Target_Revenue__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Revenue_Id_LOB_Vertical__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Revenue Id LOB Vertical</label>
        <referenceTo>Sales_Target_Revenue__c</referenceTo>
        <relationshipLabel>Opportunity Product (Target Revenue Id LOB Vertical)</relationshipLabel>
        <relationshipName>Opportunity_Product4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Revenue_Id_LOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Revenue Id LOB</label>
        <referenceTo>Sales_Target_Revenue__c</referenceTo>
        <relationshipLabel>Opportunity Product (Target Revenue Id LOB)</relationshipLabel>
        <relationshipName>Opportunity_Product5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Revenue_Id_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Revenue Id Product</label>
        <referenceTo>Sales_Target_Revenue__c</referenceTo>
        <relationshipLabel>Opportunity Product (Target Revenue Id Product)</relationshipLabel>
        <relationshipName>Opportunity_Product2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Revenue_Id_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Revenue Id User</label>
        <referenceTo>Sales_Target_Revenue__c</referenceTo>
        <relationshipLabel>Opportunity Product (Target Revenue Id User)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>